--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "dependencies": {
     "@nathanvda/cocoon": "^1.2.14",
+    "@popperjs/core": "^2.11.6",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "bootstrap": "^5.2.2",
     "cocoon": "github:nathanvda/cocoon#c24ba53",
     "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
